--- a/lecture3-CN.ipynb
+++ b/lecture3-CN.ipynb
@@ -11,6 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{admonition} 《九章算术》第八章：方程\n",
+    "今有卖牛二、羊五，以买十三豕，有馀钱一千。卖牛三、豕三，以买九羊，钱适足。卖羊六、豕八，以买五牛，钱不足六百。问牛、羊、豕价各几何?\n",
+    "\n",
+    "答曰:牛价一千二百，羊价五百，豕价三百。术曰:如方程，置牛二、羊五正，豕一十三负，馀钱数正;次牛三正，羊九负，豕三正;次牛五负，羊六正，豕八正，不足钱负。以正负术入之。\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "最小二乘法（OLS）是计量经济学中最基本的估计模型，它简单透明，易于理解。了解最小二乘法，有助于我们研究更复杂的线性估计方法。此外，许多非线性估计量在真实值附近与线性估计量的行为是类似的。在本讲义中，我们将从线性代数的运算讲起，学习一系列的知识。\n",
     "\n",
