fix jupyter-book compiling problem

--- a/lecture3-CN.ipynb
+++ b/lecture3-CN.ipynb
@@ -21,21 +21,22 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\begin{bmatrix*}[r] \n",
+    "\\left[\\begin{array}{r} \n",
     "2 & 5 & -13\\\\\n",
     "3 & -9 & 3\\\\\n",
     "-5 & 6 & 8\n",
-    "\\end{bmatrix*}\n",
-    "\\begin{bmatrix} 牛 \\\\\n",
+    "\\end{array} \\right]\n",
+    "\\left[\\begin{array}{c}\n",
+    "牛\\\\\n",
     "羊\\\\\n",
     "猪\n",
-    "\\end{bmatrix}\n",
+    "\\end{array} \\right]\n",
     "=\n",
-    "\\begin{bmatrix*}[r]\n",
+    "\\left[\\begin{array}{r}\n",
     "1000\\\\\n",
     "0\\\\\n",
     "-600\n",
-    "\\end{bmatrix*}\n",
+    "\\end{array} \\right]\n",
     "$$"
    ]
   },
@@ -52,15 +53,6 @@
     "A = matrix(c(2, 3, -5, 5, -9, 6, -13, 3, 8), nrow = 3)\n",
     "b = c(1000, 0, -600)\n",
     "solve(A,b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{admonition}\n",
-    "答曰:牛价一千二百，羊价五百，豕价三百。术曰:如方程，置牛二、羊五正，豕一十三负，馀钱数正;次牛三正，羊九负，豕三正;次牛五负，羊六正，豕八正，不足钱负。以正负术入之。\n",
-    "```"
    ]
   },
   {
