display equations follows Jupyter-book style

--- a/lecture3-CN.ipynb
+++ b/lecture3-CN.ipynb
@@ -127,9 +127,11 @@
    "metadata": {},
    "source": [
     "样本均值 (sample mean) 是总体均值 (population mean) 的天然估计量. 将式(3.1)中总体均值 $E\\left[\\cdot\\right]$ (3.1) 替换为样本均值 $\\frac{1}{n}\\sum_{i=1}^{n}\\cdot$, 那么相应的, 最小二乘法系数的估计值就可以写作\n",
+    "\n",
     "$$\\begin{aligned}\n",
     "\\widehat{\\beta} & =\\left(\\frac{1}{n}\\sum_{i=1}^{n}x_{i}x_{i}'\\right)^{-1}\\frac{1}{n}\\sum_{i=1}^{n}x_{i}y_{i}\\\\\n",
     " & =\\left(\\frac{X'X}{n}\\right)^{-1}\\frac{X'y}{n}=\\left(X'X\\right)^{-1}X'y.\\end{aligned}$$\n",
+    "\n",
     "上式假设 $X'X$ 是可逆的. 这是一种理解最小二乘法的观点. "
    ]
   },
@@ -138,11 +140,14 @@
    "metadata": {},
    "source": [
     "我们也可以从最小化残差平方和 $\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}$ 的角度来得到最小二乘法估计量, 这等价于最小化\n",
+    "\n",
     "$$\n",
     "Q\\left(b\\right)=\\frac{1}{2n}\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}=\\frac{1}{2n}\\left(Y-Xb\\right)'\\left(Y-Xb\\right)=\\frac{1}{2n}\\left\\Vert Y-Xb\\right\\Vert ^{2}.\n",
     "$$\n",
+    "\n",
     "其中, 系数 $\\frac{1}{2n}$ 与 $b$ 无关, 不会影响该最小化问题的解. $\\left\\Vert \\cdot\\right\\Vert$ 是向量的欧几里得范数(Euclidean norm). $Q\\left(b\\right)$ 最小化的一阶条件是\n",
-    "$\n",
+    "\n",
+    "$$\n",
     "\\frac{\\partial}{\\partial b}Q\\left(b\\right)=\\left[\\begin{array}{c}\n",
     "\\partial Q\\left(b\\right)/\\partial b_{1}\\\\\n",
     "\\partial Q\\left(b\\right)/\\partial b_{2}\\\\\n",
@@ -152,6 +157,7 @@
     "$$\n",
     "\n",
     "因此, 最小化 $Q\\left(b\\right)$ 的必要条件让我们得到了相同的估计值 $b=\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'y$. 另外, 二阶条件\n",
+    "\n",
     "$$\n",
     "\\frac{\\partial^{2}}{\\partial b\\partial b'}Q\\left(b\\right)=\\left[\\begin{array}{cccc}\n",
     "\\frac{\\partial^{2}}{\\partial b_{1}^{2}}Q\\left(b\\right) & \\frac{\\partial^{2}}{\\partial b_{2}\\partial b_{2}}Q\\left(b\\right) & \\cdots & \\frac{\\partial^{2}}{\\partial b_{K}\\partial b_{1}}Q\\left(b\\right)\\\\\n",
@@ -160,6 +166,7 @@
     "\\frac{\\partial^{2}}{\\partial b_{1}\\partial b_{K}}Q\\left(b\\right) & \\frac{\\partial^{2}}{\\partial b_{2}\\partial b_{K}}Q\\left(b\\right) & \\cdots & \\frac{\\partial^{2}}{\\partial b_{K}^{2}}Q\\left(b\\right)\n",
     "\\end{array}\\right]=\\frac{1}{n}X'X\n",
     "$$\n",
+    "\n",
     "表明 $Q\\left(b\\right)$ 是关于 $b$ 的凸函数, 因为 $X'X/n$ 是半正定矩阵. (如果 $X'X/n$ 是正定矩阵, 那么 $Q\\left(b\\right)$ 是关于 $b$ 的严格凸函数. ) "
    ]
   },
@@ -245,7 +252,10 @@
     "\n",
     "等式 $Y=X\\widehat{\\beta}+\\widehat{e}$ 将 $Y$ 分解为两个垂直向量, $X\\widehat{\\beta}$ 与 $\\widehat{e}$, 因为$\\left\\langle X\\widehat{\\beta},\\widehat{e}\\right\\rangle =\\widehat{\\beta}'X'\\widehat{e}=0_{K}^{\\prime}$, 其中$\\left\\langle \\cdot,\\cdot\\right\\rangle$ 是向量的内积运算. 那么, $X\\widehat{\\beta}$ 就是 $Y$ 在 $\\mathcal{X}$ 上的*投影 (projection)* , $\\widehat{e}$ 则是对应的*投影残差 (projection\n",
     "residuals)*. 根据勾股定理, 自然有\n",
-    "$$\\left\\Vert Y\\right\\Vert ^{2}=\\Vert X\\widehat{\\beta}\\Vert^{2}+\\left\\Vert \\widehat{e}\\right\\Vert ^{2}.$$\n"
+    "\n",
+    "$$\n",
+    "\\left\\Vert Y\\right\\Vert ^{2}=\\Vert X\\widehat{\\beta}\\Vert^{2}+\\left\\Vert \\widehat{e}\\right\\Vert ^{2}.\n",
+    "$$\n"
    ]
   },
   {
@@ -348,6 +358,7 @@
     "\\end{pmatrix}.\\end{aligned}$$\n",
     "\n",
     "$\\widehat{\\beta}$ 的子向量可写作 \n",
+    "\n",
     "$$\\begin{aligned}\n",
     "\\widehat{\\beta}_{1} & =\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'Y-\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'X_{2}\\left(X_{2}'X_{2}\\right)^{-1}X_{2}'Y\\\\\n",
     " & =\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'Y-\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'P_{X_{2}}Y\\\\\n",
@@ -391,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 适配度检验 (Goodness of Fit) \n",
+    "## 适配度 (Goodness of Fit) \n",
     "\n",
     "考虑回归方程\n",
     "$Y=X_{1}\\beta_{1}+\\beta_{2}+e$. 代入最小二乘法估计量, 我们得到\n",
@@ -426,7 +437,10 @@
    "metadata": {},
    "source": [
     "在线性回归中, *决定系数* ($R^2$) 是一个衡量适配度的指标. 样本内决定系数(in-sample $R^2$)可写作\n",
-    "$$R^{2}=\\frac{\\Vert M_{\\iota}X_{1}\\widehat{\\beta}_{1}\\Vert^{2}}{\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}}=1-\\frac{\\left\\Vert \\tilde{e}\\right\\Vert ^{2}}{\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}}.$$\n",
+    "\n",
+    "$$\n",
+    "R^{2}=\\frac{\\Vert M_{\\iota}X_{1}\\widehat{\\beta}_{1}\\Vert^{2}}{\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}}=1-\\frac{\\left\\Vert \\tilde{e}\\right\\Vert ^{2}}{\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}}.\n",
+    "$$\n",
     "\n",
     "仅当回归因子包含常数时, $R^2$ 才有定义. "
    ]
@@ -436,7 +450,11 @@
    "metadata": {},
    "source": [
     "**Exercise 3.2**. 在$(3.2)$式的分解下, 证明\n",
-    "$$R^{2}=\\frac{\\widehat{Y}'M_{\\iota}\\widehat{Y}}{Y'M_{\\iota}Y}=\\frac{\\sum_{i=1}^{n}\\left(\\widehat{y_{i}}-\\overline{y}\\right)^{2}}{\\sum_{i=1}^{n}\\left(y_{i}-\\overline{y}\\right)^{2}}.$$\n",
+    "\n",
+    "$$\n",
+    "R^{2}=\\frac{\\widehat{Y}'M_{\\iota}\\widehat{Y}}{Y'M_{\\iota}Y}=\\frac{\\sum_{i=1}^{n}\\left(\\widehat{y_{i}}-\\overline{y}\\right)^{2}}{\\sum_{i=1}^{n}\\left(y_{i}-\\overline{y}\\right)^{2}}.\n",
+    "$$\n",
+    "\n",
     "注意, 上述 $R^{2}$ 即为$\\widehat{Y}$的样本方差与 $Y$ 的样本方差之比值. \n",
     "\n",
     "\n",
@@ -483,7 +501,10 @@
    "metadata": {},
    "source": [
     "对于一个新的数据集 $\\left(Y^{\\mathrm{new}},X^{\\mathrm{new}}\\right)$, 样本外决定系数(OOS $R^2$) 可写作\n",
-    "$$OOS\\ R^{2}=\\frac{\\widehat{\\beta}^{\\prime}X^{\\mathrm{new}\\prime}M_{\\iota}X^{\\mathrm{new}}\\widehat{\\beta}}{Y^{\\mathrm{new}\\prime}M_{\\iota}Y^{\\mathrm{new}}}.$$\n",
+    "\n",
+    "$$\n",
+    "OOS\\ R^{2}=\\frac{\\widehat{\\beta}^{\\prime}X^{\\mathrm{new}\\prime}M_{\\iota}X^{\\mathrm{new}}\\widehat{\\beta}}{Y^{\\mathrm{new}\\prime}M_{\\iota}Y^{\\mathrm{new}}}.\n",
+    "$$\n",
     "\n",
     "从原始数据集中得到参数估计值以后, $OOS\\ R^{2}$ 衡量这一参数估计值在新数据集上的适配度. 在金融市场的短期预测模型中, 如果某策略能够系统性地获得2\\%的 $OOS\\ R^{2}$, 那么这就是一个很好的赚钱策略. \n"
    ]
