enable items such as proof, exercise

--- a/lecture3-CN.ipynb
+++ b/lecture3-CN.ipynb
@@ -72,6 +72,7 @@
    "metadata": {},
    "source": [
     "数学标记: $y_{i}$ 是标量. $x_{i}=\\left(x_{i1},\\ldots,x_{iK}\\right)'$ 是 $K\\times1$ 的向量. $Y=\\left(y_{1},\\ldots,y_{n}\\right)'$ 是 $ n\\times1$ 的向量. \n",
+    "\n",
     "$$ \n",
     "X=\\left[\\begin{array}{c}\n",
     "x_{1}'\\\\\n",
@@ -95,15 +96,16 @@
     "## 估计量 (Estimator) \n",
     "\n",
     "基于我们已经在前一讲中学习过的线性投影模型\n",
+    "\n",
     "$$\n",
     "\\begin{aligned}y & =x'\\beta+e\\end{aligned}, \n",
     "$$\n",
+    "\n",
     "投影系数 $\\beta$ 可以写作\n",
     "\n",
     "$$\n",
-    "\\beta=\\left(E\\left[xx'\\right]\\right)^{-1}E\\left[xy\\right]\\tag{3.1}\n",
-    "$$\n",
-    "\n",
+    "\\beta=\\left(E\\left[xx'\\right]\\right)^{-1}E\\left[xy\\right]. \n",
+    "$$(eqn:1)\n",
     "\n",
     "我们从 $\\left(y,x\\right)$ 的联合分布中取出一个观测值, 记作 $\\left(y_{i},x_{i}\\right)$. 重复此过程 $n$ 次得到 $n$ 个观测值, 即 $i=1,\\ldots,n$, 那么我们随即就得到了一个样本 $\\left(y_{i},x_{i}\\right)_{i=1}^{n}$. "
    ]
@@ -112,25 +114,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**注 3.1**\n",
+    "```{prf:remark}\n",
+    ":label: remark1\n",
     "样本 $\\left(y_{i},x_{i}\\right)$ 到底是随机的呢？还是固定的呢？\n",
     "\n",
-    "在我们观测之前, 样本是随机变量, 而随机变量的值是不确定的. 当我们谈起样本的统计学性质时, 我们必须将其视之为随机变量, 因为只有随机变量才有统计学性质, 固定值的统计学性质是无意义的. 而在我们观测之后, 样本的值就确定下来了, 成为固定值, 不能再更改. \n",
+    "——在我们观测之前, 样本是随机变量, 而随机变量的值是不确定的. 当我们谈起样本的统计学性质时, 我们必须将其视之为随机变量, 因为只有随机变量才有统计学性质, 固定值的统计学性质是无意义的. 而在我们观测之后, 样本的值就确定下来了, 成为固定值, 不能再更改. \n",
     "\n",
+    "```\n",
     "\n",
-    "**注 3.2** \n",
-    "在实际操作中, 我们手中只有一些给定的数据 (当然, 现在的大数据也可以将文本, 照片声音和图像处理成为数据, 这些数据在计算机当中用0和1来表示) . 我们把这些数据扔给计算机, 让计算机给出一个结果. 在统计学意义上, 我们认为这些数字是从一个概率分布上得出的思想实验结果. 思想实验是一个学术用语, 说白了, 它就是一个故事. 在公理体系统治的概率论当中, 这个故事在数学上是自洽的. 但是数学本身是一个套套逻辑 (tautology) , 而不是科学. 概率模型的科学价值在于, 它到底在多大程度上能够逼近事实的真相？以及, 它是不是能够帮我们预测一些真相？在这门课中, 我们假设数据来自于某种机制, 我们把这种机制当成真相. 比如, 在线性回归当中, $\\left(y,x\\right)$ 的联合分布就是我们头脑中的真相. 而我们想要研究的线性投影系数 $\\beta$ 即为此真相的某个侧面. \n"
+    "```{prf:remark}\n",
+    ":label: remark2\n",
+    "在实际操作中, 我们手中只有一些给定的数据 (当然, 现在的大数据也可以将文本, 照片声音和图像处理成为数据, 这些数据在计算机当中用0和1来表示) . 我们把这些数据扔给计算机, 让计算机给出一个结果. 在统计学意义上, 我们认为这些数字是从一个概率分布上得出的**思想实验**结果. 思想实验是一个学术用语, 说白了, 它就是一个故事. 在公理体系统治的概率论当中, 这个故事在数学上是自洽的. 但是要知道，数学本身是一个套套逻辑 (tautology) , 而不是科学. \n",
+    "\n",
+    "而概率模型的科学价值恰恰在于, 它到底在多大程度上能够逼近事实的真相？以及, 它是不是能够帮我们预测一些真相？在这门课中, 我们假设数据来自于某种机制, 我们把这种机制当成真相. 比如, 在线性回归当中, $\\left(y,x\\right)$ 的联合分布就是我们头脑中的真相. 而我们想要研究的线性投影系数 $\\beta$ 即为此真相的某个侧面表现形式. \n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "样本均值 (sample mean) 是总体均值 (population mean) 的天然估计量. 将式(3.1)中总体均值 $E\\left[\\cdot\\right]$ (3.1) 替换为样本均值 $\\frac{1}{n}\\sum_{i=1}^{n}\\cdot$, 那么相应的, 最小二乘法系数的估计值就可以写作\n",
+    "样本均值 (sample mean) 是总体均值 (population mean) 的天然估计量. 将式 {eq}`eqn:1` 中总体均值 $E\\left[\\cdot\\right]$ 替换为样本均值 $\\frac{1}{n}\\sum_{i=1}^{n}\\cdot$, 那么相应的, 最小二乘法系数的估计值就可以写作\n",
     "\n",
-    "$$\\begin{aligned}\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "\\widehat{\\beta} & =\\left(\\frac{1}{n}\\sum_{i=1}^{n}x_{i}x_{i}'\\right)^{-1}\\frac{1}{n}\\sum_{i=1}^{n}x_{i}y_{i}\\\\\n",
-    " & =\\left(\\frac{X'X}{n}\\right)^{-1}\\frac{X'y}{n}=\\left(X'X\\right)^{-1}X'y.\\end{aligned}$$\n",
+    " & =\\left(\\frac{X'X}{n}\\right)^{-1}\\frac{X'y}{n}=\\left(X'X\\right)^{-1}X'y.\\end{aligned}\n",
+    "$$\n",
     "\n",
     "上式假设 $X'X$ 是可逆的. 这是一种理解最小二乘法的观点. "
    ]
@@ -145,7 +155,9 @@
     "Q\\left(b\\right)=\\frac{1}{2n}\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}=\\frac{1}{2n}\\left(Y-Xb\\right)'\\left(Y-Xb\\right)=\\frac{1}{2n}\\left\\Vert Y-Xb\\right\\Vert ^{2}.\n",
     "$$\n",
     "\n",
-    "其中, 系数 $\\frac{1}{2n}$ 与 $b$ 无关, 不会影响该最小化问题的解. $\\left\\Vert \\cdot\\right\\Vert$ 是向量的欧几里得范数(Euclidean norm). $Q\\left(b\\right)$ 最小化的一阶条件是\n",
+    "其中, 系数 $\\frac{1}{2n}$ 与 $b$ 无关, 不会影响该最小化问题的解. $\\left\\Vert \\cdot\\right\\Vert$ 是向量的欧几里得范数(Euclidean norm). \n",
+    "\n",
+    "$Q\\left(b\\right)$ 最小化的一阶条件是\n",
     "\n",
     "$$\n",
     "\\frac{\\partial}{\\partial b}Q\\left(b\\right)=\\left[\\begin{array}{c}\n",
@@ -156,7 +168,9 @@
     "\\end{array}\\right]=-\\frac{1}{n}X'\\left(Y-Xb\\right)=0.\n",
     "$$\n",
     "\n",
-    "因此, 最小化 $Q\\left(b\\right)$ 的必要条件让我们得到了相同的估计值 $b=\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'y$. 另外, 二阶条件\n",
+    "因此, 最小化 $Q\\left(b\\right)$ 的必要条件让我们得到了相同的估计值 $b=\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'y$. \n",
+    "\n",
+    "另外, 二阶条件\n",
     "\n",
     "$$\n",
     "\\frac{\\partial^{2}}{\\partial b\\partial b'}Q\\left(b\\right)=\\left[\\begin{array}{cccc}\n",
@@ -174,17 +188,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**注 3.3**\n",
+    "```{prf:remark}\n",
+    ":label: remark3\n",
     "在最小二乘法的推导中, 我们假定 $X$ 中的 $K$ 列是*线性独立的*, 也就是说不存在 $K\\times1$ 的向量\n",
     "$b\\ (b\\neq0_{K})$ 使得 $Xb=0_{n}$. 同时, 这也意味着 $n\\geq K$ , 并且 $X'X/n$ 是可逆矩阵. \n",
+    "\n",
     "然而线性独立的假设并不永远正确, 如果某些回归因子满足*完全共线性 (perfectly collinear)* , 就违反了线性独立的假设. \n",
-    "例如, 使用虚拟变量来表示分类变量并将所有这些类别放入回归模型中时, 通常计量经济学软件会自动检测并指出完全共线性问题. 然而, 难以察觉的是*不完全共线性 (nearly collinear)*, 即 $X'X/n$ 的最小特征值接近于0, 而不等于0. 我们将在渐进理论一章中讨论不完全共线性的后果. \n"
+    "\n",
+    "例如, 使用虚拟变量来表示分类变量并将所有这些类别放入回归模型中时, 通常计量经济学软件会自动检测并指出完全共线性问题. 然而, 难以察觉的是*不完全共线性 (nearly collinear)*, 即 $X'X/n$ 的最小特征值接近于0, 而不等于0. 我们将在渐进理论一章中讨论不完全共线性的后果. \n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{prf:property}\n",
+    ":label: property1\n",
+    "\n",
     "下面列举一些与最小二乘法估计量有关的定义与性质. \n",
     "\n",
     "-  拟合值 (Fitted value): $\\widehat{Y}=X\\widehat{\\beta}$.\n",
@@ -205,7 +226,14 @@
     "  $\\mathrm{rank}\\left(M_{X}\\right)=n-K$.\n",
     "\n",
     "- 残差: \n",
-    "  $\\widehat{e}=Y-\\widehat{Y}=Y-X\\widehat{\\beta}=Y-X(X'X)^{-1}X'Y=(I_{n}-P_{X})Y=M_{X}Y=M_{X}\\left(X\\beta+e\\right)=M_{X}e$. \n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\widehat{e}&=Y-\\widehat{Y}=Y-X\\widehat{\\beta}=Y-X(X'X)^{-1}X'Y=(I_{n}-P_{X})Y=M_{X}Y\\\\\n",
+    "&=M_{X}\\left(X\\beta+e\\right)=M_{X}e.\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
     "  注意 $\\widehat{e}$ 和 $e$ 是不同的. \n",
     "\n",
     "-  $X'\\widehat{e}=X'M_{X}e=0_{K}$.\n",
@@ -228,7 +256,9 @@
     "  \\vdots\\\\\n",
     "  0\n",
     "  \\end{array}\\right]$ , 第一行运算说明了\n",
-    "  $\\sum_{i=1}^{n}\\widehat{e}_{i}=0$. \"$\\heartsuit$\" 代表与我们计算无关的值. )"
+    "  $\\sum_{i=1}^{n}\\widehat{e}_{i}=0$. \"$\\heartsuit$\" 代表与我们计算无关的值. )\n",
+    "  \n",
+    " ```"
    ]
   },
   {
@@ -262,26 +292,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 3.1**. 下面是一个简单的数值模拟案例, 我们以此来说明最小二乘法估计量的特性. 给定\n",
+    "````{prf:example}\n",
+    ":label: example1\n",
+    "\n",
+    "下面是一个简单的数值模拟案例, 我们以此来说明最小二乘法估计量的特性. 给定\n",
     "$\\left(x_{1i},x_{2i},x_{3i},e_{i}\\right)^{\\prime}\\sim N\\left(0_{4},I_{4}\\right)$, 因变量 $y_{i}$ 的生成式为\n",
     "$$\n",
     "y_{i}=0.5+2\\cdot x_{1i}-1\\cdot x_{2i}+e_{i}\n",
     "$$\n",
     "\n",
     "在不知道 $x_{3i}$ 是多余的情况下, 我们将 $y_{i}$ 对\n",
-    "$\\left(1,x_{1i},x_{2i},x_{3i}\\right)$ 进行回归. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "$\\left(1,x_{1i},x_{2i},x_{3i}\\right)$ 进行回归. \n",
+    "\n",
+    "```r\n",
     "library(magrittr); set.seed(2022-6-15)\n",
     "n = 20 # sample size \n",
     "K = 4 # number of paramters\n",
@@ -289,32 +312,20 @@
     "X = cbind(1, matrix( rnorm(n * (K-1)), nrow = n ) ) # the regressor matrix \n",
     "e = rnorm(n) # the error term\n",
     "Y = X %*% b0 + e # generate the dependent variable\n",
-    "bhat = solve(t(X) %*% X, t(X) %*% Y ) %>% as.vector() %>% print()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "最后得到的参数估计值与真实值已经很接近. 当然, 由于样本容量较小, 答案不是十分准确. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "bhat = solve(t(X) %*% X, t(X) %*% Y ) %>% as.vector() %>% print()\n",
+    "```\n",
+    "\n",
+    "最后得到的参数估计值与真实值已经很接近. 当然, 由于样本容量较小, 答案不是十分准确. \n",
+    "\n",
+    "```r\n",
     "ehat = Y - X %*% bhat \n",
     "as.vector( t(X) %*% ehat ) %>% print()\n",
     "MX = diag(n) - X %*% solve( crossprod(X) ) %*% t(X)\n",
     "data.frame(e = e, ehat = ehat, MXY = MX%*%Y, MXe = MX%*%e ) %>% head()\n",
     "cat(\"The mean of the residual is \", mean(ehat), \".\\n\")\n",
-    "cat(\"The mean of the true error term is\", mean(e), \".\")"
+    "cat(\"The mean of the true error term is\", mean(e), \".\")\n",
+    "```\n",
+    "````"
    ]
   },
   {
@@ -328,16 +339,20 @@
     "A_{12}' & A_{22}\n",
     "\\end{pmatrix},$\n",
     "它的逆矩阵可以写作\n",
-    "$$A^{-1}=\\begin{pmatrix}\\left(A_{11}-A_{12}A_{22}^{-1}A_{12}'\\right)^{-1} & -\\left(A_{11}-A_{12}A_{22}^{-1}A_{12}'\\right)^{-1}A_{12}A_{22}^{-1}\\\\\n",
+    "\n",
+    "$$\n",
+    "A^{-1}=\\begin{pmatrix}\\left(A_{11}-A_{12}A_{22}^{-1}A_{12}'\\right)^{-1} & -\\left(A_{11}-A_{12}A_{22}^{-1}A_{12}'\\right)^{-1}A_{12}A_{22}^{-1}\\\\\n",
     "-A_{22}^{-1}A_{12}'\\left(A_{11}-A_{12}A_{22}^{-1}A_{12}'\\right)^{-1} & \\left(A_{22}-A_{12}'A_{11}^{-1}A_{12}\\right)^{-1}\n",
-    "\\end{pmatrix}.$$\n",
+    "\\end{pmatrix}.\n",
+    "$$\n",
     "\n",
     "\n",
     "\n",
     "将此性质运用至最小二乘法估计量. 记 $X=\\left(\\begin{array}{cc}\n",
     "X_{1} & X_{2}\\end{array}\\right),$ 那么\n",
     "\n",
-    "$$\\begin{aligned}\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "\\begin{pmatrix}\\widehat{\\beta}_{1}\\\\\n",
     "\\widehat{\\beta}_{2}\n",
     "\\end{pmatrix} & =\\widehat{\\beta}=(X'X)^{-1}X'Y\\\\\n",
@@ -355,15 +370,18 @@
     "\\heartsuit & \\heartsuit\n",
     "\\end{pmatrix}\\begin{pmatrix}X_{1}'Y\\\\\n",
     "X_{2}'Y\n",
-    "\\end{pmatrix}.\\end{aligned}$$\n",
+    "\\end{pmatrix}.\\end{aligned}\n",
+    "$$\n",
     "\n",
     "$\\widehat{\\beta}$ 的子向量可写作 \n",
     "\n",
-    "$$\\begin{aligned}\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "\\widehat{\\beta}_{1} & =\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'Y-\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'X_{2}\\left(X_{2}'X_{2}\\right)^{-1}X_{2}'Y\\\\\n",
     " & =\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'Y-\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'P_{X_{2}}Y\\\\\n",
     " & =\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}\\left(X_{1}'Y-X_{1}'P_{X_{2}}Y\\right)\\\\\n",
-    " & =\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'M_{X_{2}}Y.\\end{aligned}$$\n",
+    " & =\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'M_{X_{2}}Y.\\end{aligned}\n",
+    "$$\n",
     "\n",
     "注意, 我们可以用三步方法得到 $\\widehat{\\beta}_{1}$: \n",
     "\n",
@@ -402,11 +420,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 适配度 (Goodness of Fit) \n",
+    "## 适配度检验 (Goodness of Fit) \n",
     "\n",
     "考虑回归方程\n",
     "$Y=X_{1}\\beta_{1}+\\beta_{2}+e$. 代入最小二乘法估计量, 我们得到\n",
-    "$$Y=\\widehat{Y}+\\widehat{e}=\\left(X_{1}\\widehat{\\beta}_{1}+\\widehat{\\beta}_{2}\\right)+\\widehat{e}\\tag{3.2}$$\n",
+    "\n",
+    "$$\n",
+    "Y=\\widehat{Y}+\\widehat{e}=\\left(X_{1}\\widehat{\\beta}_{1}+\\widehat{\\beta}_{2}\\right)+\\widehat{e}\n",
+    "$$(eqn:2)\n",
     "\n",
     "应用FWL定理, 令 $X_{2}=\\iota$, 其中希腊字母 $\\iota$ (iota)是一个所有位置都为1的 $n\\times1$ 向量. 那么$M_{X_{2}}=M_{\\iota}=I_{n}-\\frac{1}{n}\\iota\\iota'$. 其中, $M_{\\iota}z=z-\\bar{z}$. 也就是说, 我们在原本的向量 $z$ 中减去其均值 $\\bar{z}=\\frac{1}{n}\\sum_{i=1}^{n}z_{i}$. \n",
     "\n",
@@ -420,16 +441,27 @@
     "\n",
     "\n",
     "我们将最后一步进行分解\n",
-    "$$M_{\\iota}Y=M_{\\iota}X_{1}\\widehat{\\beta}_{1}+\\tilde{e},\\tag{3.3}$$\n",
+    "\n",
+    "$$\n",
+    "M_{\\iota}Y=M_{\\iota}X_{1}\\widehat{\\beta}_{1}+\\tilde{e},\n",
+    "$$(eqn:3)\n",
+    "\n",
     "应用勾股定理得到\n",
-    "$$\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}=\\Vert M_{\\iota}X_{1}\\widehat{\\beta}_{1}\\Vert^{2}+\\left\\Vert \\widehat{e}\\right\\Vert ^{2}.$$\n"
+    "\n",
+    "$$\n",
+    "\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}=\\Vert M_{\\iota}X_{1}\\widehat{\\beta}_{1}\\Vert^{2}+\\left\\Vert \\widehat{e}\\right\\Vert ^{2}.\n",
+    "$$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise 3.1**. 试说明: $(3.2)$式中的 $\\widehat{e}$ 与$(3.3)$式中的 $\\tilde{e}$ 相等. "
+    "```{exercise}\n",
+    ":label: exercise1\n",
+    "\n",
+    "试说明: {eq}`eqn:2` 式中的 $\\widehat{e}$ 与 {eq}`eqn:3` 式中的 $\\tilde{e}$ 相等. \n",
+    "```"
    ]
   },
   {
@@ -449,13 +481,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise 3.2**. 在$(3.2)$式的分解下, 证明\n",
+    "```{exercise}\n",
+    ":label: exercise2\n",
+    "\n",
+    "在 {eq}`eqn:2` 式的分解下, 证明\n",
     "\n",
     "$$\n",
     "R^{2}=\\frac{\\widehat{Y}'M_{\\iota}\\widehat{Y}}{Y'M_{\\iota}Y}=\\frac{\\sum_{i=1}^{n}\\left(\\widehat{y_{i}}-\\overline{y}\\right)^{2}}{\\sum_{i=1}^{n}\\left(y_{i}-\\overline{y}\\right)^{2}}.\n",
     "$$\n",
-    "\n",
     "注意, 上述 $R^{2}$ 即为$\\widehat{Y}$的样本方差与 $Y$ 的样本方差之比值. \n",
+    "\n",
+    "```\n",
     "\n",
     "\n",
     "决定系数 $R^2$ 的大小在不同的实际问题下差别很大. 在具有滞后效应的宏观模型中, 遇到 $R^2$ 大于90%的情况并不罕见. 然而, 在横向研究 (cross sectional regressions) 中, $R^2$ 的值经常是低于20%的. "
@@ -465,10 +501,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise 3.3**\n",
+    "```{exercise}\n",
+    ":label: exercise3\n",
+    "\n",
     "考虑一个较“短”的回归 \"将 $y_{i}$ 对 $x_{1i}$ 做回归\" 与一个较“长”的回归\n",
     " \"将 $y_{i}$ 对 $\\left(x_{1i},x_{2i}\\right)$ 做回归\": 给定相同的数据集 $\\left(Y,X_{1},X_{2}\\right)$, 试说明“短”回归的 $R^2$ 不比“长”回归的 $R^2$ 大. (也就是说, 通过增加更多的回归因子, 我们总能使得 $R^2$ 增大或者不变. ) \n",
-    "\n",
+    "```\n",
     "\n",
     "在传统意义上, 回归因子的数量 $K$ 总是远小于样本量 $n$ . 然而, 在大数据时代, (潜在) 回归因子的数量 $K$ 有可能大于样本量 $n$. \n"
    ]
@@ -477,23 +515,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise 3.4** 证明: 当 $K\\geq n$ 时, $R^{2}=1$. 注意, 若 $K>n$, 则矩阵 $X'X$ 是缺秩 (rank deficient) 的. 在这种情况下, 我们可以将最小二乘法的定义扩展, $\\hat \\beta$ 仍然是使得 $\\left\\Vert Y-Xb\\right\\Vert ^{2}$ 最小化的参数值, 但这个值不是唯一的. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "````{exercise}\n",
+    ":label: exercise4\n",
+    "\n",
+    "证明: 当 $K\\geq n$ 时, $R^{2}=1$. 注意, 若 $K>n$, 则矩阵 $X'X$ 是缺秩 (rank deficient) 的. 在这种情况下, 我们可以将最小二乘法的定义扩展, $\\hat \\beta$ 仍然是使得 $\\left\\Vert Y-Xb\\right\\Vert ^{2}$ 最小化的参数值, 但这个值不是唯一的. \n",
+    "\n",
+    "```r\n",
     "n = 5; K = 6; \n",
     "Y = rnorm(n)\n",
     "X = matrix( rnorm(n*K), n)\n",
-    "summary( lm(Y~X) )"
+    "summary( lm(Y~X) )\n",
+    "```\n",
+    "\n",
+    "````"
    ]
   },
   {
@@ -519,27 +553,24 @@
     "以上有关线性代数的性质, 在有限样本中是成立的, 无论数据是固定数字或是随机变量. 然而高斯马尔科夫定理 (Gauss Markov theorem) 只在两个关键假设下成立: 线性的条件期望方程 (linear CEF) 和同方差性 (homoscedasticity) . \n",
     "\n",
     "\n",
-    "**历史趣闻.**\n",
-    "高斯 (1777--1855) 宣称他在1795年就发明了最小二乘法, 那时他用三个数据点预测了1801年矮行星谷神星的位置. 虽然高斯在1809年才发表了相关文章, 而勒让德 (1752--1833) 在1805年就公开提出了此方法, 但今天人们仍倾向于将最小二乘法的发明归功于高斯. 因为像高斯这样的数学巨人没有必要通过撒谎来窃取勒让德的成果. "
+    "```{admonition} 历史趣闻\n",
+    "Carl Friedrich Gauss (1777--1855) 宣称他在1795年就发明了最小二乘法, 那时他用三个数据点预测了1801年矮行星谷神星的位置. 虽然 Gauss 在1809年才发表了相关文章, 而 Adrien-Marie Legendre (1752--1833) 在1805年就公开提出了此方法, 但今天人们仍倾向于将最小二乘法的发明归功于 Gauss. 因为像 Gauss 这样的数学巨人没有必要通过撒谎来窃取 Legendre 的成果. \n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -548,7 +579,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "R",
+   "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
