add code into ch5

--- a/lecture5-CN.ipynb
+++ b/lecture5-CN.ipynb
@@ -148,7 +148,14 @@
     "\\frac{1}{n}\\sum_{i=1}^{n}(z_{i}-E[z_{i}])\\stackrel{p}{\\to}0. \n",
     "$$ \n",
     "\n",
-    "不同版本的大数定律基于不同的假设, 也取决于对应随机变量的不同性质. \n",
+    "不同版本的大数定律基于不同的假设, 也取决于对应随机变量的不同性质. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f3bbd11",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "### 切比雪夫大数定律 Chebyshev LLN\n",
@@ -185,7 +192,14 @@
     "$$\n",
     "```\n",
     "\n",
-    "马尔可夫不等式的证明十分简单. \n",
+    "马尔可夫不等式的证明十分简单. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f6fbf7b",
+   "metadata": {},
+   "source": [
     "\n",
     "```{prf:proof}\n",
     "\n",
@@ -211,10 +225,11 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "P\\left\\{ \\left|z_{n}\\right|\\geq\\varepsilon\\right\\}  & =P\\left\\{ n^{-1}\\left|S_{n}-E\\left[S_{n}\\right]\\right|\\geq\\varepsilon\\right\\} \\nonumber \\\\\n",
-    " & \\leq E\\left[\\left(n^{-1}\\sum_{i=1}^{n}\\left(x_{i}-\\mu_{i}\\right)\\right)^{2}\\right]/\\varepsilon^{2}\\nonumber \\\\\n",
-    " & =\\left(n\\varepsilon\\right)^{-2}\\left\\{ E\\left[\\sum_{i=1}^{n}\\left(x_{i}-\\mu_{i}\\right)^{2}\\right]+\\sum_{i=1}^{n}\\sum_{j\\neq i}E\\left[\\left(x_{i}-\\mu_{i}\\right)\\left(x_{j}-\\mu_{j}\\right)\\right]\\right\\} \\nonumber \\\\\n",
-    " & =\\left(n\\varepsilon\\right)^{-2}\\left\\{ \\sum_{i=1}^{n}\\mathrm{var}\\left(x_{i}\\right)+\\sum_{i=1}^{n}\\sum_{j\\neq i}\\mathrm{cov}\\left(x_{i}, x_{j}\\right)\\right\\} . \\end{aligned}\n",
+    "P\\left\\{ \\left|z_{n}\\right|\\geq\\varepsilon\\right\\}  & =P\\left\\{ n^{-1}\\left|S_{n}-E\\left[S_{n}\\right]\\right|\\geq\\varepsilon\\right\\} \\\\\n",
+    " & \\leq E\\left[\\left(n^{-1}\\sum_{i=1}^{n}\\left(x_{i}-\\mu_{i}\\right)\\right)^{2}\\right]/\\varepsilon^{2}\\\\\n",
+    " & =\\left(n\\varepsilon\\right)^{-2}\\left\\{ E\\left[\\sum_{i=1}^{n}\\left(x_{i}-\\mu_{i}\\right)^{2}\\right]+\\sum_{i=1}^{n}\\sum_{j\\neq i}E\\left[\\left(x_{i}-\\mu_{i}\\right)\\left(x_{j}-\\mu_{j}\\right)\\right]\\right\\} \\\\\n",
+    " & =\\left(n\\varepsilon\\right)^{-2}\\left\\{ \\sum_{i=1}^{n}\\mathrm{var}\\left(x_{i}\\right)+\\sum_{i=1}^{n}\\sum_{j\\neq i}\\mathrm{cov}\\left(x_{i}, x_{j}\\right)\\right\\}. \n",
+    " \\end{aligned}\n",
     "$$(eqn:cheb_mean)\n",
     "\n",
     "如果在 $n\\to\\infty$ 时, 右式趋近于0, 那么 $z_{n}$ 依概率收敛至0. 比如, 若 $x_{1}, \\ldots, x_{n}$ 是 iid 变量, $\\mathrm{var}\\left(x_{1}\\right)=\\sigma^{2}$, 那么 {eq}`eqn:cheb_mean` 右式 $\\left(n\\varepsilon\\right)^{-2}\\left(n\\sigma^{2}\\right)=o\\left(n^{-1}\\right)\\to0$. \n",
@@ -232,20 +247,41 @@
     "$$\n",
     "```\n",
     "\n",
-    "事实上, 依概率收敛的大数定律可以去除独立同分布 (iid) 的假设：样本中的随机变量可以不是同分布的, 也不必相互独立. \n",
+    "事实上, 依概率收敛的大数定律可以去除独立同分布 (iid) 的假设：样本中的随机变量可以不是同分布的, 也不必相互独立. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43131792",
+   "metadata": {},
+   "source": [
     "\n",
     "```{exercise}\n",
     ":label: exercise52\n",
     "\n",
     "考虑一组相互独立 (不一定同分布) 的随机样本 $\\left(x_{1}, \\ldots, x_{n}\\right)$ 使得 $E\\left[x_{i}\\right]=0$, $\\mathrm{var}\\left[x_{i}\\right]=\\sqrt{n}c$, $c>0$是常数. 利用切比雪夫不等式, 证明 $n^{-1}\\sum_{i=1}^{n}x_{i}\\stackrel{p}{\\to}0$. \n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a21f792",
+   "metadata": {},
+   "source": [
     "\n",
     "```{exercise}\n",
     ":label: exercise52\n",
     "\n",
     "考虑一组时间序列的移动平均 (MA) 模型 $x_{i}=\\varepsilon_{i}+\\theta\\varepsilon_{i-1}$, $i=1, \\ldots, n$. 其中, $\\left|\\theta\\right|<1$, $E\\left[\\varepsilon_{i}\\right]=0$, $\\mathrm{var}\\left[\\varepsilon_{i}\\right]=\\sigma^{2}$, 并且 $\\left(\\varepsilon_{i}\\right)_{i=0}^{n}$ 是独立同分布的白噪声序列. 利用切比雪夫不等式, 证明 $n^{-1}\\sum_{i=1}^{n}x_{i}\\stackrel{p}{\\to}0$. \n",
     "\n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05fc1d81",
+   "metadata": {},
+   "source": [
     "\n",
     "大数定律的另一个常见版本是*Kolmogorov LLN*. 要导出 Kolmogorov LLN, 需要更高阶的概率论知识, 因此我们只在此给出结果, 证明略去. \n",
     "\n",
@@ -268,11 +304,81 @@
     "\n",
     "考虑三种分布, 标准正态分布 $N\\left(0, 1\\right)$, $t$-分布 $t\\left(2\\right)$ (均值为0, 方差无限大) , 柯西分布 (所有的矩都不存在) . 在不同样本容量 $n=2^{1}, 2^{2}, \\ldots, 2^{20}$ 的假设下, 绘制出样本均值的轨迹图. 我们发现, $N\\left(0, 1\\right)$ 与 $t\\left(2\\right)$ 的样本均值收敛, 而柯西分布的样本均值并不收敛. \n",
     "\n",
+    "````\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac62f120",
+   "metadata": {},
+   "source": [
+    "This script demonstrates the law of large numbers (LLN) along with the underlying assumptions.\n",
     "\n",
-    "````\n",
+    "Write a function to generate the sample mean given the sample size $n$ and the distribution.\n",
+    "We allow three distributions, namely, $N(0,1)$, $t(2)$ and Cauchy.\n",
     "\n",
+    "The sample size is chosen as $2^x$, where $x=1:20$. We have the following observations.\n",
     "\n",
-    "**knitrout**"
+    "* When the distribution is $N(0,1)$, the Chebyshev LLN works. The sample mean converges fast.\n",
+    "* When the distribution is $t(2)$, which has zero mean but infinite variance, the Kolmogorov LLN works. The sample mean still converges, though more slowly than the $N(0,1)$ case.\n",
+    "* The Cauchy distribution has no moment at any order. The sample mean does not converge no matter how large is the sample size."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a9a5f01",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sample.mean = function( n, distribution ){\n",
+    "  # get sample mean for a given distribution\n",
+    "  if (distribution == \"normal\"){ y = rnorm( n ) } \n",
+    "  else if (distribution == \"t2\") {y = rt(n, 2) }\n",
+    "  else if (distribution == \"cauchy\") {y = rcauchy(n) }\n",
+    "  return( mean(y) )\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1db2754",
+   "metadata": {},
+   "source": [
+    "This function plots the sample mean over the path of geometrically increasing sample size."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e3e5b73",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "LLN.plot = function(distribution){\n",
+    "  # draw the sample mean graph\n",
+    "  ybar = matrix(0, length(NN), 3 )\n",
+    "  for (rr in 1:3){\n",
+    "    for ( ii in 1:length(NN)){\n",
+    "      n = NN[ii]; ybar[ii, rr] = sample.mean(n, distribution)\n",
+    "    }  \n",
+    "  }\n",
+    "  matplot(ybar, type = \"l\", ylab = \"mean\", xlab = \"\", \n",
+    "       lwd = 1, lty = 1, main = distribution)\n",
+    "  abline(h = 0, lty = 2)\n",
+    "  return(ybar)\n",
+    "}\n",
+    "# calculation\n",
+    "NN = 2^(1:20); set.seed(2020-10-7); par(mfrow = c(3,1))\n",
+    "l1 = LLN.plot(\"normal\"); l2 = LLN.plot(\"t2\"); l3 = LLN.plot(\"cauchy\")"
    ]
   },
   {
@@ -355,7 +461,14 @@
     "```{prf:remark}\n",
     ":label: remark51\n",
     "上述依赖于 MGF 的证明非常易于理解, 但缺点在于, 并非所有分布都有定义良好的 MGF. 更一般的证明过程是把 MGF 替换为 *特征函数(characteristic function)* $\\varphi_{x}\\left(t\\right)=E\\left[\\exp\\left(\\mathrm{i}xt\\right)\\right]$, 其中 “$\\mathrm{i}$” 是虚数单位. 特征函数是概率测度的 *傅立叶变换* , 它必然存在. 用这种方法来证明中心极限定理, 需要傅立叶变换与逆转换的知识, 我们在这里不做要求. \n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78522033",
+   "metadata": {},
+   "source": [
     "\n",
     "我们继续介绍中心极限定理的两种常见形式. \n",
     "\n",
@@ -380,12 +493,63 @@
     "\\frac{\\sum_{i=1}^{n}x_{i}}{s_{n}}\\stackrel{d}{\\to}N\\left(0, 1\\right). \n",
     "$$\n",
     "    \n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41053ef6",
+   "metadata": {},
+   "source": [
     "\n",
-    "下面是一个模拟案例. \n",
+    "下面是一个模拟案例. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3387646f",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Z_fun = function(n, distribution){\n",
+    "  if (distribution == \"normal\"){\n",
+    "      z = sqrt(n) * mean(rnorm(n))\n",
+    "\t} else if (distribution == \"chisq2\") {\n",
+    "      df = 2; \n",
+    "      x = rchisq(n,2)\n",
+    "      z = sqrt(n) * ( mean(x) - df ) / sqrt(2*df)\n",
+    "      }\n",
+    "  return (z)\n",
+    "}\n",
+    "CLT_plot = function(n, distribution){\n",
+    "  Rep = 10000\n",
+    "  ZZ = rep(0, Rep)\n",
+    "  for (i in 1:Rep) {ZZ[i] = Z_fun(n, distribution)}\n",
     "\n",
-    "\\[knitrout\\]\n",
+    "  xbase = seq(-4.0, 4.0, length.out = 100)\n",
+    "  hist( ZZ, breaks = 100, freq = FALSE, \n",
+    "    xlim = c( min(xbase), max(xbase) ),\n",
+    "    main = paste0(\"hist with sample size \", n) )\n",
+    "  lines(x = xbase, y = dnorm(xbase), col = \"red\")\n",
+    "  return (ZZ)\n",
+    "}\n",
     "\n",
+    "par(mfrow = c(3,1))\n",
+    "phist = CLT_plot(2, \"chisq2\")\n",
+    "phist = CLT_plot(10, \"chisq2\")\n",
+    "phist = CLT_plot(100, \"chisq2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "907a8cf1",
+   "metadata": {},
+   "source": [
     "\n",
     "## 转化方法\n",
     "\n",
@@ -459,7 +623,14 @@
     "\n",
     "证明完毕. \n",
     "\n",
-    "````\n",
+    "````\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ca0b228",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "## 总结\n",
@@ -483,16 +654,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "776849b5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": {
@@ -501,10 +676,15 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "R",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f0f3c2ff56be48af7298a14c9a97ca5fd7aeab5c1ef3d3151d92452bace946e5"
+   }
   }
  },
  "nbformat": 4,
