change the title in config file

--- a/lecture5-CN.ipynb
+++ b/lecture5-CN.ipynb
@@ -8,6 +8,17 @@
     "#  基本渐近理论\n",
     "\n",
     "\n",
+    "```{admonition}  赤壁赋\n",
+    "寄蜉蝣于天地，渺沧海之一粟。哀吾生之须臾，羡长江之无穷。挟飞仙以遨游，抱明月而长终。\n",
+    " ```\n",
+    " ---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7363164",
+   "metadata": {},
+   "source": [
     "\n",
     "我们身处的宇宙虽然浩瀚, 却只由不到 $10^{82}$ 个原子组成——这是一个有限的数字. 然而, 数学思想并不受制于现实. 渐进理论 (Asymptotic theory) 是一门有关无限的艺术, 它研究统计量在样本量趋于无穷大之时的性质与行为. 它用一系列“近似”的技巧来简化复杂的有限样本分析问题. 可以说, 渐近理论是现代计量经济学的基石. 它超越了有限样本理论所涵盖的一切, 揭示了在更普遍情况下 (也即无限情况下) 的统计估计与推断理论. \n",
     "\n",
@@ -156,8 +167,6 @@
    "id": "5f3bbd11",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "### 切比雪夫大数定律 Chebyshev LLN\n",
     "\n",
     "\n",
@@ -282,8 +291,9 @@
    "id": "05fc1d81",
    "metadata": {},
    "source": [
+    "### Kolmogorov大数定律\n",
     "\n",
-    "大数定律的另一个常见版本是*Kolmogorov LLN*. 要导出 Kolmogorov LLN, 需要更高阶的概率论知识, 因此我们只在此给出结果, 证明略去. \n",
+    "大数定律的另一个常见版本是*Kolmogorov大数定律*. 要导出 Kolmogorov大数定律, 需要更高阶的概率论知识, 因此我们只在此给出结果, 证明略去. \n",
     "\n",
     "\n",
     "```{prf:theorem} Kolmogorov LLN\n",
@@ -296,7 +306,7 @@
     "$$\n",
     " ```\n",
     "\n",
-    "与 Chebyshev LLN 相比, Kolmogorov LLN 只要求总体均值是存在的, 并不对更高阶的矩作要求. 独立同分布的假设对于 Kolmogorov LLN 来说已然足够. \n",
+    "与 Chebyshev大数定律相比, Kolmogorov大数定律只要求总体均值是存在的, 并不对更高阶的矩作要求. 独立同分布的假设对于Kolmogorov大数定律来说已然足够. \n",
     "\n",
     "\n",
     "````{prf:example}\n",
