start to revise lec3

--- a/lecture3-CN.ipynb
+++ b/lecture3-CN.ipynb
@@ -93,56 +93,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 估计量 (Estimator) \n",
+    "## 最小二乘法\n",
     "\n",
-    "基于我们已经在前一讲中学习过的线性投影模型\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}y & =x'\\beta+e\\end{aligned}, \n",
-    "$$\n",
-    "\n",
-    "投影系数 $\\beta$ 可以写作\n",
-    "\n",
-    "$$\n",
-    "\\beta=\\left(E\\left[xx'\\right]\\right)^{-1}E\\left[xy\\right]. \n",
-    "$$(eqn:1)\n",
-    "\n",
-    "我们从 $\\left(y,x\\right)$ 的联合分布中取出一个观测值, 记作 $\\left(y_{i},x_{i}\\right)$. 重复此过程 $n$ 次得到 $n$ 个观测值, 即 $i=1,\\ldots,n$, 那么我们随即就得到了一个样本 $\\left(y_{i},x_{i}\\right)_{i=1}^{n}$. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{prf:remark}\n",
-    ":label: remark31\n",
-    "样本 $\\left(y_{i},x_{i}\\right)$ 到底是随机的呢？还是固定的呢？\n",
-    "\n",
-    "——在我们观测之前, 样本是随机变量, 而随机变量的值是不确定的. 当我们谈起样本的统计学性质时, 我们必须将其视之为随机变量, 因为只有随机变量才有统计学性质, 固定值的统计学性质是无意义的. 而在我们观测之后, 样本的值就确定下来了, 成为固定值, 不能再更改. \n",
-    "\n",
-    "```\n",
-    "\n",
-    "```{prf:remark}\n",
-    ":label: remark32\n",
-    "在实际操作中, 我们手中只有一些给定的数据 (当然, 现在的大数据也可以将文本, 照片声音和图像处理成为数据, 这些数据在计算机当中用0和1来表示) . 我们把这些数据扔给计算机, 让计算机给出一个结果. 在统计学意义上, 我们认为这些数字是从一个概率分布上得出的**思想实验**结果. 思想实验是一个学术用语, 说白了, 它就是一个故事. 在公理体系统治的概率论当中, 这个故事在数学上是自洽的. 但是要知道，数学本身是一个套套逻辑 (tautology) , 而不是科学. \n",
-    "\n",
-    "而概率模型的科学价值恰恰在于, 它到底在多大程度上能够逼近事实的真相？以及, 它是不是能够帮我们预测一些真相？在这门课中, 我们假设数据来自于某种机制, 我们把这种机制当成真相. 比如, 在线性回归当中, $\\left(y,x\\right)$ 的联合分布就是我们头脑中的真相. 而我们想要研究的线性投影系数 $\\beta$ 即为此真相的某个侧面表现形式. \n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "样本均值 (sample mean) 是总体均值 (population mean) 的天然估计量. 将式 {eq}`eqn:1` 中总体均值 $E\\left[\\cdot\\right]$ 替换为样本均值 $\\frac{1}{n}\\sum_{i=1}^{n}\\cdot$, 那么相应的, 最小二乘法系数的估计值就可以写作\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "\\widehat{\\beta} & =\\left(\\frac{1}{n}\\sum_{i=1}^{n}x_{i}x_{i}'\\right)^{-1}\\frac{1}{n}\\sum_{i=1}^{n}x_{i}y_{i}\\\\\n",
-    " & =\\left(\\frac{X'X}{n}\\right)^{-1}\\frac{X'y}{n}=\\left(X'X\\right)^{-1}X'y.\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "上式假设 $X'X$ 是可逆的. 这是一种理解最小二乘法的观点. "
+    "给定 $n$ 个观测值 $\\left(y_{i},x_{i}\\right)_{i=1}^{n}$, 我们想用 $X$ 的某个线性组合 $Xb$ 尽量逼近 $Y$. 说到逼近，我们需要定义两个向量 $Y$ 和 $Xb$ 之间的距离。欧氏距离 $ \\Vert Y - Xb \\Vert_2 = \\sqrt{\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}}$ 是常用的定义。"
    ]
   },
   {
